# charon

./: .travis.yml  Body.cpp  Body.h  CMakeCPP.cmake  CMakeConfig.cmake  CMakeLists.txt  CMakeReport.cmake  Paraview_VectorVel.pvd  Position.cpp  Position.h  Tree.h  Velocity.cpp  Velocity.h  benchmarks.csv  benchmarks1_partialBHT_BH.csv  compiler_explorer.txt  parse_info_vec.py
benchmark/: CMakeLists.txt  calcNexPos.cpp  calculateNextStep.cpp  defaultSettings.h  main.cpp
config/: charonConfig.json  simulatorConfig.json  universeConfig.json
main/: CMakeLists.txt
main/barnesHutSFCImpl/: BarnesHutMultiThreadUniverse.cpp  BarnesHutMultiThreadUniverse.h  BarnesHutOffloadUniverse.cpp  BarnesHutOffloadUniverse.h  BarnesHutUniverse.cpp  BarnesHutUniverse.h  BarnesHutUniverseBase.cpp  BarnesHutUniverseBase.h
main/barnesHutTreeImpl/: BarnesHutTreeUniverse.cpp  BarnesHutTreeUniverse.h  OctTreeNode.cpp  OctTreeNode.h
main/base/: AbstractUniverse.cpp  AbstractUniverse.h  Timer.h  Util.h  Vector3.cpp  Vector3.h  Vector3Offload.cpp  Vector3Offload.h
main/bruteForceImpl/: BruteForceMultiThreadUniverse.cpp  BruteForceMultiThreadUniverse.h  BruteForceOffloadUniverse.cpp  BruteForceOffloadUniverse.h  BruteForceOffloadUniverse2.cpp  BruteForceOffloadUniverse2.h  BruteForceOffloadUniverse3.cpp  BruteForceOffloadUniverse3.h  BruteForceUniverse.cpp  BruteForceUniverse.h  BruteForceUniverseBase.cpp  BruteForceUniverseBase.h
main/impl1/: BarnesHutUniverse.cpp  BarnesHutUniverse.h  BarnesHutUniverse2.cpp  BarnesHutUniverse2.h  BarnesHutUniverse3.cpp  BarnesHutUniverse3.h  BruteForceMultiThreadUniverse.cpp  BruteForceMultiThreadUniverse.h  BruteForceOffloadUniverse.h  BruteForceOffloadUniverse2.h  BruteForceOffloadUniverse3.cpp  BruteForceOffloadUniverse3.h  BruteForceUniverse.cpp  BruteForceUniverse.h  OctTreeNode.cpp  OctTreeNode.h  SFCTree.cpp  octTreeMain.cpp  sfcTest.py  testMain.cpp
main/impl1/SFCOctTree/: Node.cpp  Node.h  SFCIndex.cpp  SFCIndex.h  SFCOctTree.cpp  SFCOctTree.h  constants.h  sfcOctTreeTest.cpp
main/settings/: FileSettings.cpp  FileSettings.h  Settings.cpp  Settings.h  SimulatorSettings.cpp  SimulatorSettings.h  UniverseSettings.cpp  UniverseSettings.h
main/simple1/: CMakeLists.txt  Universe.cpp  Universe.h  main.cpp
main/simulator/: Simulator.cpp  Simulator.h  benchmark.cpp  main.cpp
main/universeShapes/: BinaryUniverseShape.h  RandomCubeUniverseShape.h  UniverseShape.cpp  UniverseShape.h  UniverseShapes.cpp  UniverseShapes.h
paper_pers_proj/presentatie/: BFMTSpeedup.eps  BFMTSpeedup.tex  BFOSpeedup.eps  BFOSpeedup.tex  BFStrong.eps  BFStrong.tex  BHMTSpeedup.eps  BHMTSpeedup.tex  BHOSpeedup.eps  BHOSpeedup.tex  BHStrong.eps  BHStrong.tex  BHTSpeedup.eps  BHTSpeedup.tex  BarnesHutMultiThreadSpeedup2  BarnesHutMultiThreadSpeedup3  BarnesHutMultiThreadSpeedup4  BarnesHutMultiThreadSpeedup6  BarnesHutMultiThreadStrong131072  BarnesHutMultiThreadStrong16384  BarnesHutMultiThreadStrong256  BarnesHutMultiThreadStrong262144  BarnesHutMultiThreadStrong4096  BarnesHutMultiThreadStrong524288  BruteForceMultiThreadSpeedup1  BruteForceMultiThreadSpeedup2  BruteForceMultiThreadSpeedup6  BruteForceMultiThreadStrong16384  BruteForceMultiThreadStrong32768  BruteForceMultiThreadStrong4096  BruteForceMultiThreadStrong8192  benchmarks.csv  gnuplot_makegraphs.plt  parseBenchmarks.py  template_Beamer.aux  template_Beamer.tex
paper_pers_proj/presentatie/benchmarks/: BFMTSpeedup.eps  BFOSpeedup.eps  BFStrong.eps  BHMTSpeedup.eps  BHMTSpeedup.tex  BHOSpeedup.eps  BHOSpeedup.tex  BHStrong.eps  BHTSpeedup.eps  BHTSpeedup.tex  BarnesHutMultiThreadSpeedup1  BarnesHutMultiThreadSpeedup5  BarnesHutMultiThreadStrong1048576  BarnesHutMultiThreadStrong128  BarnesHutMultiThreadStrong2048  BarnesHutMultiThreadStrong32768  BarnesHutMultiThreadStrong512  BarnesHutMultiThreadStrong64  BarnesHutMultiThreadStrong65536  BarnesHutMultiThreadStrong8192  BarnesHutMultiThreadWeak  BarnesHutOffloadUniverseSpeedup  BarnesHutTreeUniverseSpeedup  BruteForceMultiThreadSpeedup3  BruteForceMultiThreadSpeedup4  BruteForceMultiThreadSpeedup5  BruteForceMultiThreadStrong1024  BruteForceMultiThreadStrong128  BruteForceMultiThreadStrong2048  BruteForceMultiThreadStrong256  BruteForceMultiThreadStrong512  BruteForceMultiThreadStrong64  BruteForceOffloadUniverseSpeedup  gnuplot_makegraphs.plt
paper_pers_proj/presentatie/benchmarks/time_nbodies_alg/: BarnesHutTree.csv
presentation/: template_Beamer.tex
src/: Body.cpp  Body.h  CMakeLists.txt  Position.cpp  Simulation.cpp  Simulation.h  Simulator.cpp  Simulator.h  Summary.cpp  Summary.h  Tree.cpp  Tree.h  Universe.cpp  Universe.h  Universe2.cpp  Universe2.h  UniversePhysics.cpp  UniversePhysics.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h
src/base/: AbstractUniverse.cpp  AbstractUniverse.h  Simulator.cpp  Simulator.h
src2/: Body.h  CMakeLists.txt  Position.h  QuadTree.cpp  QuadTree.h  Simulator.h  Simulator2.cpp  Simulator2.h  Universe.h  Vector2.cpp  Vector2.h  Vector3.h  Vector3s.cpp  Vector3s.h  Velocity.h  main.cpp
test/: BarnesHutUniverseTest.cpp  BodyTest.cpp  BruteForceUniverseTest.cpp  CMakeLists.txt  UniversePhysics.cpp  UniverseTest.cpp  Vector2Test.cpp  gtest.cpp
